Fix crash that occurred while detecting mods. Config cleanup.